Another powermock revert and adding in conditional to run script for the -XX:+PrintGCDateStamps flag