@@ -114,6 +114,14 @@ function check_and_enable_64_bit_mode {
   fi
 }
 
+# Try and use the -XX:+PrintGCDateStamps jvm argument. Java11 will fail
+function check_and_enable_print_gc_datestamps {
+  `$JAVA -XX:+PrintGCDateStamps -version
+  if [ $? -eq 0 ] ; then
+    JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDateStamps"
+  fi
+}
+
 ### Inherit JVM_OPTS from task.opts configuration, and initialize defaults ###
 
 # Make the MDC inheritable to child threads by setting the system property to true if config not explicitly specified
@@ -160,6 +168,9 @@ fi
 
 # Check if 64 bit is set. If not - try and set it if it's supported
 [[ $JAVA_OPTS != *-d64* ]] && check_and_enable_64_bit_mode
+
+# Check if we can use PrintGCDateStamps. Java 11 will fail if this is provided, Java 8 is fine
+[[ $JAVA_OPTS != *PrintGCDateStamps* ]] && check_and_enable_print_gc_datestamps
 
 # HADOOP_CONF_DIR should be supplied to classpath explicitly for Yarn to parse configs
 echo $JAVA $JAVA_OPTS -cp $HADOOP_CONF_DIR:$PATHING_JAR_FILE "$@"
